[package]
name = "terrars-andrewbaxter-localrun"
edition = "2021"
version = "0.1.3"
description = "Pre-generated Terrars Localrun bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-andrewbaxter-localrun"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.0.10"

[features]
run = []
