[package]
name = "terrars-andrewbaxter-localrun"
edition = "2021"
version = "0.1.14"
description = "Pre-generated Terrars Localrun bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-andrewbaxter-localrun"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.7"

[features]
data_run = []
